--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -74,8 +74,8 @@ msgid "Chose your operator"
 msgstr "Vyberte operátora"
 
 msgctxt "#30660"
-msgid "Input.Stream/CDM"
-msgstr "Input.Stream/CDM"
+msgid "DRM"
+msgstr "DRM"
 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
@@ -272,3 +272,7 @@ msgstr "Ladit"
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
 msgstr "Zahrnout citlivá přihlašovací data v ladícím výpisu [NESDÍLEJTE VEŘEJNĚ]"
+
+msgctxt "#30692"
+msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
