--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -79,8 +79,8 @@ msgstr "Válassza ki a szolgáltatót"
 
 #: 
 msgctxt "#30660"
-msgid "Input.Stream/CDM"
-msgstr "Input.Stream/CDM"
+msgid "DRM"
+msgstr "DRM"
 
 #: 
 msgctxt "#30665"
@@ -314,3 +314,7 @@ msgstr "GYEREKEK"
 msgctxt "#30730"
 msgid "Weekly Top"
 msgstr "Heti top"
+
+msgctxt "#30692"
+msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
