--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -75,8 +75,8 @@ msgid "Chose your operator"
 msgstr "Alegeți operatorul"
 
 msgctxt "#30660"
-msgid "Input.Stream/CDM"
-msgstr "Input.Stream/CDM"
+msgid "DRM"
+msgstr "DRM"
 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate,resolution,ecc..)"
@@ -273,3 +273,7 @@ msgstr "Debug/depanare"
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
 msgstr "Include date private de login în logul de debug [NU POSTAȚI PUBLIC]"
+
+msgctxt "#30692"
+msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
