--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -318,3 +318,11 @@ msgstr "Heti top"
 msgctxt "#30692"
 msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
 msgstr "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
+
+msgctxt "#30693"
+msgid "Include full details/RAW retrived data in Debug log"
+msgstr "Include full details/RAW retrived data in Debug log"
+
+msgctxt "#30694"
+msgid "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
+msgstr "Cryptodome dependency not present on your system, HBO go add-on can't run. For help consult install instructions/official support thread"
